force-app/main/default/objects/EBooking__c/EBooking__c.object-meta.xml
<CustomObject>
    <label>E-Booking</label>
    <nameField>
        <displayFormat>EBK-{000000}</displayFormat>
        <label>E-Booking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Booking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>