force-app/main/default/objects/EBooking__c/fields/BLType__c.field-meta.xml
<CustomField>
    <fullName>BLType__c</fullName>
    <label>B/L Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BLType</valueSetName>
    </valueSet>
</CustomField>