force-app/main/default/objects/EBooking__c/fields/BookingParty__c.field-meta.xml
<CustomField>
    <fullName>BookingParty__c</fullName>
    <label>Booking Party</label>
    <length>100</length>
    <type>Text</type>
</CustomField>