force-app/main/default/objects/EBooking__c/fields/CargoClosingTime__c.field-meta.xml
<CustomField>
    <fullName>CargoClosingTime__c</fullName>
    <label>Cargo Closing Time</label>
    <type>DateTime</type>
</CustomField>