force-app/main/default/objects/EBooking__c/fields/Coloaderline__c.field-meta.xml
<CustomField>
    <fullName>Coloaderline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coloader-line</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>E-BOOKING (Coloader-line)</relationshipLabel>
    <relationshipName>Coloaderline</relationshipName>
    <type>Lookup</type>
</CustomField>