force-app/main/default/objects/EBooking__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>E-BOOKING</relationshipLabel>
    <relationshipName>Ebooking</relationshipName>
    <type>Lookup</type>
</CustomField>