force-app/main/default/objects/EBooking__c/fields/CompanyNameEng__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameEng__c</fullName>
    <formula>CompanyName__r.EnglishCompanyName__c</formula>
    <label>Company Name (Eng)</label>
    <type>Text</type>
</CustomField>