force-app/main/default/objects/EBooking__c/fields/ConsigneeCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeCompanyName__c</fullName>
    <label>Consignee Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>