force-app/main/default/objects/EBooking__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <label>Container Type-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContainerType</valueSetName>
    </valueSet>
</CustomField>