force-app/main/default/objects/EBooking__c/fields/ContainerNumber__c.field-meta.xml
<CustomField>
    <fullName>ContainerNumber__c</fullName>
    <label>Container Q’ty-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>