force-app/main/default/objects/EBooking__c/fields/ContractCode__c.field-meta.xml
<CustomField>
    <fullName>ContractCode__c</fullName>
    <label>Contract Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>