force-app/main/default/objects/EBooking__c/fields/CreateNewRecordForActualCargo__c.field-meta.xml
<CustomField>
    <fullName>CreateNewRecordForActualCargo__c</fullName>
    <label>Create New Record for Actual Cargo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreateNewRecordForActualCargo</valueSetName>
    </valueSet>
</CustomField>