force-app/main/default/objects/EBooking__c/fields/DescriptionOfGoods__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOfGoods__c</fullName>
    <label>Description of Goods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>