force-app/main/default/objects/EBooking__c/fields/EmptyPickupPlace__c.field-meta.xml
<CustomField>
    <fullName>EmptyPickupPlace__c</fullName>
    <label>Empty Pickup Place</label>
    <type>TextArea</type>
</CustomField>