force-app/main/default/objects/EBooking__c/fields/FinalDestination__c.field-meta.xml
<CustomField>
    <fullName>FinalDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Destination</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>E-BOOKING (FINAL DESTINATION)</relationshipLabel>
    <relationshipName>EBookingFD</relationshipName>
    <type>Lookup</type>
</CustomField>