force-app/main/default/objects/EBooking__c/fields/FinalDestinationText__c.field-meta.xml
<CustomField>
    <fullName>FinalDestinationText__c</fullName>
    <label>Final Destination-Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>