force-app/main/default/objects/EBooking__c/fields/FreightForwarderNVOCC__c.field-meta.xml
<CustomField>
    <fullName>FreightForwarderNVOCC__c</fullName>
    <label>Freight Forwarder/NVOCC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>