force-app/main/default/objects/EBooking__c/fields/FTMSSO__c.field-meta.xml
<CustomField>
    <fullName>FTMSSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS S/O</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>E-BOOKING</relationshipLabel>
    <relationshipName>EBooking</relationshipName>
    <type>Lookup</type>
</CustomField>