force-app/main/default/objects/EBooking__c/fields/FurtherRouting__c.field-meta.xml
<CustomField>
    <fullName>FurtherRouting__c</fullName>
    <label>Further Routing</label>
    <type>TextArea</type>
</CustomField>