force-app/main/default/objects/EBooking__c/fields/HSHode__c.field-meta.xml
<CustomField>
    <fullName>HSHode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS Code</label>
    <referenceTo>HS_Code__c</referenceTo>
    <relationshipLabel>E-BOOKING</relationshipLabel>
    <relationshipName>EBooking</relationshipName>
    <type>Lookup</type>
</CustomField>