force-app/main/default/objects/EBooking__c/fields/IntendedShippingDate__c.field-meta.xml
<CustomField>
    <fullName>IntendedShippingDate__c</fullName>
    <label>Intended Shipping Date</label>
    <type>Date</type>
</CustomField>