force-app/main/default/objects/EBooking__c/fields/LadenReturnPlace__c.field-meta.xml
<CustomField>
    <fullName>LadenReturnPlace__c</fullName>
    <label>Laden Return Place</label>
    <type>TextArea</type>
</CustomField>