force-app/main/default/objects/EBooking__c/fields/MasterCarrierConsolidatorEng__c.field-meta.xml
<CustomField>
    <fullName>MasterCarrierConsolidatorEng__c</fullName>
    <formula>MasterCarrierConsolidator__r.EnglishCompanyName__c</formula>
    <label>Master Carrier/Consolidator (Eng)</label>
    <type>Text</type>
</CustomField>