force-app/main/default/objects/EBooking__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>Phone number</label>
    <type>Phone</type>
</CustomField>