force-app/main/default/objects/EBooking__c/fields/PICOfConsignee__c.field-meta.xml
<CustomField>
    <fullName>PICOfConsignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC of Consignee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Consignee__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>E-BOOKING (PIC of Consignee)</relationshipLabel>
    <relationshipName>EBookingPICConsignee</relationshipName>
    <type>Lookup</type>
</CustomField>