force-app/main/default/objects/EBooking__c/fields/Place_Of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Receipt</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>E-BOOKING(PLACE OF RECEIPT)</relationshipLabel>
    <relationshipName>EBookingPOR</relationshipName>
    <type>Lookup</type>
</CustomField>