force-app/main/default/objects/EBooking__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>E-BOOKING (P.O.D(A.O.A))</relationshipLabel>
    <relationshipName>EBookingPOD</relationshipName>
    <type>Lookup</type>
</CustomField>