force-app/main/default/objects/EBooking__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L(A.O.D)</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>E-BOOKING (P.O.L(A.O.D))</relationshipLabel>
    <relationshipName>EBookingPOL</relationshipName>
    <type>Lookup</type>
</CustomField>