force-app/main/default/objects/EBooking__c/fields/POLText__c.field-meta.xml
<CustomField>
    <fullName>POLText__c</fullName>
    <label>P.O.L(A.O.D)-Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>