force-app/main/default/objects/EBooking__c/fields/PreviousBookingNumber__c.field-meta.xml
<CustomField>
    <fullName>PreviousBookingNumber__c</fullName>
    <label>Previous booking number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>