force-app/main/default/objects/EBooking__c/fields/RequestedVessel__c.field-meta.xml
<CustomField>
    <fullName>RequestedVessel__c</fullName>
    <label>Requested Vessel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>