force-app/main/default/objects/EBooking__c/fields/RequesterCompanyName__c.field-meta.xml
<CustomField>
    <fullName>RequesterCompanyName__c</fullName>
    <label>Requester Company Name</label>
    <type>TextArea</type>
</CustomField>