force-app/main/default/objects/EBooking__c/fields/RequestsInDestination__c.field-meta.xml
<CustomField>
    <fullName>RequestsInDestination__c</fullName>
    <label>Requested Wording in Destination</label>
    <type>TextArea</type>
</CustomField>