force-app/main/default/objects/EBooking__c/fields/RequestsInOrigin__c.field-meta.xml
<CustomField>
    <fullName>RequestsInOrigin__c</fullName>
    <label>Requested Wording in Origin</label>
    <type>TextArea</type>
</CustomField>