force-app/main/default/objects/EBooking__c/fields/RequiredVoyage__c.field-meta.xml
<CustomField>
    <fullName>RequiredVoyage__c</fullName>
    <label>Required Voyage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>