force-app/main/default/objects/EBooking__c/fields/RollupContsfromHBkg__c.field-meta.xml
<CustomField>
    <fullName>RollupContsfromHBkg__c</fullName>
    <label>Rollup Conts from HBkg</label>
    <summarizedField>HouseBkg__c.ContainerQty__c</summarizedField>
    <summaryFilterItems>
        <field>HouseBkg__c.Cancelled__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>HouseBkg__c.MasterBkg__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>