force-app/main/default/objects/EBooking__c/fields/SalesManName__c.field-meta.xml
<CustomField>
    <fullName>SalesManName__c</fullName>
    <inlineHelpText>Internal Sales or External Sales</inlineHelpText>
    <label>Sales Man Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>