force-app/main/default/objects/EBooking__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>E-BOOKING (SHIPPER)</relationshipLabel>
    <relationshipName>EBookingShipper</relationshipName>
    <type>Lookup</type>
</CustomField>