force-app/main/default/objects/EBooking__c/fields/SICutoffCarrier__c.field-meta.xml
<CustomField>
    <fullName>SICutoffCarrier__c</fullName>
    <label>SI Cut-off (from Carrier)</label>
    <type>DateTime</type>
</CustomField>