force-app/main/default/objects/EBooking__c/fields/StuffingDate__c.field-meta.xml
<CustomField>
    <fullName>StuffingDate__c</fullName>
    <label>Stuffing Date</label>
    <type>Date</type>
</CustomField>