force-app/main/default/objects/EBooking__c/fields/StuffingPlace__c.field-meta.xml
<CustomField>
    <fullName>StuffingPlace__c</fullName>
    <label>Stuffing Place</label>
    <type>TextArea</type>
</CustomField>