force-app/main/default/objects/EBooking__c/fields/VASType__c.field-meta.xml
<CustomField>
    <fullName>VASType__c</fullName>
    <label>VAS Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueAddedServiceType</valueSetName>
    </valueSet>
</CustomField>