force-app/main/default/objects/EBooking__c/fields/VGMCutoffCarrier__c.field-meta.xml
<CustomField>
    <fullName>VGMCutoffCarrier__c</fullName>
    <label>VGM Cut-off (from Carrier)</label>
    <type>DateTime</type>
</CustomField>