force-app/main/default/objects/EBooking__c/fields/VGMCutoffCustomer__c.field-meta.xml
<CustomField>
    <fullName>VGMCutoffCustomer__c</fullName>
    <label>VGM Cut-off (for Customer)</label>
    <type>DateTime</type>
</CustomField>