force-app/main/default/objects/EBooking__c/recordTypes/EBooking.recordType-meta.xml
<RecordType>
    <fullName>EBooking</fullName>
    <active>true</active>
    <label>EBooking</label>
</RecordType>