force-app/main/default/objects/EBooking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BookingStatus__c</columns>
    <columns>POL__c</columns>
    <columns>POD__c</columns>
    <columns>CompanyName__c</columns>
    <columns>FreightForwarderNVOCC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>