force-app/main/default/objects/EBooking__c/listViews/BookingTodayRegistered.listView-meta.xml
<ListView>
    <fullName>BookingTodayRegistered</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>BookingStatus__c</columns>
    <columns>POL__c</columns>
    <columns>POD__c</columns>
    <columns>FreightForwarderNVOCC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Booking Today Registered</label>
</ListView>