force-app/main/default/objects/EBooking__c/listViews/JustCreated.listView-meta.xml
<ListView>
    <fullName>JustCreated</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Just Created</label>
</ListView>